fix: Wrap style in PreviewWindow.

--- a/app/components/MainPage/PreviewWindow.scss
+++ b/app/components/MainPage/PreviewWindow.scss
@@ -4,4 +4,7 @@
 
   background-color: white;
   overflow: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
